alb-tls-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alb-tls-app
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: alb-tls-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: alb-tls-app
    spec:
      containers:
      - image: nginxdemos/nginx-hello:plain-text
        imagePullPolicy: IfNotPresent
        name: alb-tls-app
        ports:
        - containerPort: 443
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nginx/ssl
          name: secret
          readOnly: true
        - mountPath: /etc/nginx/conf.d
          name: config-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: secret
        secret:
          secretName: alb-tls-app-secret
      - configMap:
          name: secure-config
        name: config-volume
