alb-tls-app-svcCIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-tls-app-cip
  namespace: default
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: alb-tls-app
  sessionAffinity: None
